Fix accreditations overlapping in some view widths. Issue with row height.

--- a/css/style.css
+++ b/css/style.css
@@ -2173,47 +2173,46 @@ header {
   /* line 4, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
   #accreditations .flex-row {
     justify-content: space-between;
-    align-items: flex-start;
-    height: 74px; }
-  /* line 9, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
+    align-items: flex-start; }
+  /* line 8, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
   #accreditations .flex-item {
     padding: 0 20px;
     flex: 1 1 auto;
     position: relative; }
-    /* line 13, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
+    /* line 12, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
     #accreditations .flex-item img {
       height: auto;
       width: 100%; }
-    /* line 17, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
+    /* line 16, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
     #accreditations .flex-item .hover {
       display: none; }
 
 @media (min-width: 768px) {
-  /* line 24, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
+  /* line 23, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
   #accreditations {
     display: block;
     width: 750px;
     margin: 0 auto; }
-    /* line 29, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
+    /* line 28, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
     #accreditations .flex-row:nth-of-type(1) .flex-item:nth-of-type(n+3):hover img, #accreditations .flex-row:nth-of-type(2) .flex-item:nth-of-type(1n):hover img {
       display: none; }
-    /* line 32, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
+    /* line 31, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
     #accreditations .flex-row:nth-of-type(1) .flex-item:nth-of-type(n+3):hover .hover, #accreditations .flex-row:nth-of-type(2) .flex-item:nth-of-type(1n):hover .hover {
       display: block; }
-    /* line 36, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
+    /* line 35, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
     #accreditations .flex-row:nth-of-type(2) {
       margin-top: 20px; } }
 
 @media (min-width: 992px) {
-  /* line 42, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
+  /* line 41, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
   #accreditations {
     width: 970px; } }
 
 @media (min-width: 1260px) {
-  /* line 47, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
+  /* line 46, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
   #accreditations {
     width: 1200px; }
-    /* line 49, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
+    /* line 48, ../../../Desktop/Projects/netmatters/scss/_accreditations.scss */
     #accreditations .flex-item {
       flex: 0 1 auto; } }
 
