--- a/scss/_accreditations.scss
+++ b/scss/_accreditations.scss
@@ -4,7 +4,6 @@
     .flex-row {
         justify-content: space-between;
         align-items: flex-start;
-        height: 74px;
     }
     .flex-item {
         padding: 0 20px;
